--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,19 @@
-<h1>Nginx up!</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nginx</title>
+  </head>
+  <body
+    style="
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    "
+  >
+    <h1>Nginx funcionou!</h1>
+  </body>
+</html>
